# paraphina

./: .gitignore  Cargo.toml  Makefile  README.md  ROADMAP.md  pytest.ini
.github/workflows/: adversarial_regression.yml  docs_integrity.yml  mc_scale_smoke.yml  phase_a_smoke.yml  phase_ab_promotion_gate.yml  phase_ab_smoke.yml  roadmap_b_ci.yml  (+5 more)
agent-tools/: step_b_results.json
batch_runs/: exp02_profile_risk_grid.py  exp03_stress_search.py  exp04_multi_scenario_stress.py  exp05_telemetry_validation.py  exp06_safe_region_from_exp04.py  exp07_optimal_presets.py  exp08_profile_validation.py  exp_phase_a_adversarial_search.py  exp_phase_a_pareto_mc.py  metrics.py  orchestrator.py  profile_centres.py  test_adversarial_search.py  ts_metrics.py  wm01_train_world_model.py  wm02_dream_rollouts.py  wm03_train_world_model_sa.py  wm04_optimize_constant_policy.py  world_model_dataset.py
configs/: research_alignment_budgets.json
deploy/: Dockerfile  config_manager.py  deploy_orchestrator.py  docker-compose.yml
docs/: AI_PLAYBOOK.md  BURNIN_REPORT_TEMPLATE.md  CANONICAL_SPEC_V1_SHA256.txt  DOCS_INTEGRITY.md  EVIDENCE_PACK.md  EXPERIMENTS.md  EXTENDED_CONNECTOR.md  HEDGE_ALLOCATOR_VERIFICATION.md  PARADEX_CONNECTOR.md  PHASE_AB_PIPELINE.md  PHASE_A_ADVERSARIAL_SEARCH.md  PHASE_A_MONTE_CARLO_SCALE.md  PHASE_A_PROMOTION_PIPELINE.md  PHASE_B_CONFIDENCE_GATING.md  REPO_INTEGRITY.md  ROADMAP_B.md  ROADMAP_B_READINESS_REPORT.md  RUNBOOK.md  SIM_EVAL_SPEC.md  SIM_OUTPUT_SCHEMA.md  TELEMETRY_SCHEMA_V1.md  VPS_DEPLOYMENT.md  WHITEPAPER.md  WHITEPAPER_COMPLETION_AUDIT.json  WHITEPAPER_COMPLETION_AUDIT.md  WHITEPAPER_COMPLETION_AUDIT_PACK.md  WHITEPAPER_COMPLETION_TODO.md  WHITEPAPER_REQUIREMENTS.json  WP100_SIGNOFF.md  WP_PARITY_MATRIX.md  evidence_pack_manifest.md  lighter_env_example.md  lighter_live_auth.md
paraphina/: Cargo.toml
paraphina/src/: actions.rs  config.rs  engine.rs  event_log.rs  execution_events.rs  exit.rs  fill_batcher.rs  gateway.rs  hedge.rs  lib.rs  loop_scheduler.rs  main.rs  metrics.rs  mm.rs  order_management.rs  orderbook_l2.rs  state.rs  strategy.rs  strategy_action.rs  strategy_core.rs  tail_risk.rs  telemetry.rs  toxicity.rs  treasury.rs  types.rs
paraphina/src/io/: mod.rs  noop.rs  sim.rs
paraphina/src/live/: connector_registry.rs  gateway.rs  instrument.rs  market_publisher.rs  mock_exchange.rs  mod.rs  ops.rs  order_state.rs  orderbook_l2.rs  paper_adapter.rs  rest_health_monitor.rs  runner.rs  shadow_adapter.rs  shared_venue_ages.rs  state_cache.rs  supervision.rs  trade_mode.rs  types.rs  venue_health.rs  venue_health_enforcer.rs  venues.rs
paraphina/src/live/connectors/: aster.rs  extended.rs  hyperliquid.rs  lighter.rs  lighter_nonce.rs  lighter_signer.rs  mod.rs  paradex.rs
paraphina/src/rl/: action_encoding.rs  domain_rand.rs  mod.rs  observation.rs  research_budgets.rs  runner.rs  safe_pipeline.rs  safety.rs  sim_env.rs  telemetry.rs  trajectory.rs
paraphina/src/sim_eval/: ablation.rs  env_override.rs  evidence_pack.rs  evidence_pack_verify.rs  mod.rs  output.rs  report.rs  scenario.rs  suite.rs  summarize.rs
paraphina/tests/: ablation_tests.rs  buffer_reuse_determinism_tests.rs  config_profile_tests.rs  exit_engine_tests.rs  extended_ws_defaults_tests.rs  hedge_allocator_golden.rs  hedge_allocator_invariants.rs  hedge_allocator_tests.rs  hedge_testkit.rs  live_account_ingestion_tests.rs  live_all5_shadow_paper_fixture_tests.rs  live_aster_fixture_tests.rs  live_cli_tests.rs  live_event_log_replay_tests.rs  live_event_serialization_tests.rs  live_extended_fixture_tests.rs  live_fill_batcher_tests.rs  live_five_connector_fixture_tests.rs  live_gateway_tests.rs  live_hyperliquid_core_orderbook_tests.rs  live_hyperliquid_runner_fixture_tests.rs  live_kill_switch_tests.rs  live_mock_exchange_tests.rs  live_multi_connector_fixture_tests.rs  live_ops_tests.rs  live_paper_mode_tests.rs  live_paradex_fixture_tests.rs  live_preflight_tests.rs  live_reconcile_tests.rs  live_reconciliation_tests.rs  live_shadow_adapter_tests.rs  live_shadow_output_tests.rs  live_state_cache_parity_tests.rs  live_telemetry_contract_tests.rs  live_venue_health_tests.rs  mm_quote_model_tests.rs  monte_carlo_evidence_pack_tests.rs  monte_carlo_scale_tests.rs  monte_carlo_threaded_determinism_tests.rs  replay_determinism_tests.rs  (+14 more)
paraphina/tests/golden/: hedge_allocator_vectors.json
paraphina_env/: Cargo.toml
paraphina_env/src/: lib.rs
scenarios/: README.md
schemas/: mc_runs_schema_v1.json  telemetry_schema_v1.json
src/: actions.rs  config.rs  engine.rs  exit.rs  gateway.rs  hedge.rs  lib.rs  logging.rs  main.rs  mm.rs  state.rs  strategy.rs  strategy_core.rs  telemetry.rs  toxicity.rs  types.rs
tests/: __init__.py  config_profile_tests.rs  exit_engine_tests.rs  fair_value_gating_tests.rs  metrics_tests.rs  mm_quote_model_tests.rs  risk_regim_tests.rs  smoke_profiles.rs  test_docs_integrity_gate.py  test_evidence_pack_manifest.py  test_phase_ab_exit_codes.py  test_scenario_library_v1.py  test_telemetry_contract_gate.py  test_unicode_controls_scanner.py  toxicity_markout_tests.rs  vol_floor_tests.rs
tools/: RESEARCH.md  __init__.py  baseline_profile.py  batch_runs.py  check_docs_integrity.py  check_telemetry_contract.py  check_unicode_controls.py  exp02_hedge_band_heatmap.py  exp03_size_eta_vol_sweep.py  exp04_risk_regime_sweep.py  exp05_calibration_report.py  exp06_full_research_suite.py  exp07_optimal_presets.py  exp08_profile_validation.py  exp09_hyperparam_search.py  exp10_world_model_alignment.py  exp11_research_alignment.py  exp12_profile_saftey_tuner.py  exp13_auto_research_harness.py  generate_roadmap_b_readiness_report.py  generate_wp100_audit.py  inspect_ticks.py  lighter_ws_analysis.py  manual_telemetry_summary.py  obs_capture_window.py  obs_telemetry_analysis.py  paraphina_watch.py  print_live_connector_matrix.py  requirements-research.txt  research_summary.py  research_ticks.py  run_all5_shadow.sh  run_burnin.py  run_checkpoints.sh  run_step_b_matrix.py  sim_eval_report.py  telemetry_analyzer.py  verify_live_shadow_outdir.py  ws_soak_report.py
(+141 files in other folders)
