[package]
name = "paraphina"
version = "0.1.0"
edition = "2021"

[lib]
# Core engine as a reusable library.
name = "paraphina"
path = "src/lib.rs"

[[bin]]
# Simulation / demo driver binary (what `cargo run` executes).
name = "paraphina"
path = "src/main.rs"

[dependencies]
# For JSON logging of per-tick snapshots (FileSink).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# For command-line argument parsing.
clap = { version = "4", features = ["derive"] }
