[workspace]
members = ["paraphina", "paraphina_env"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
pyo3 = { version = "0.21", features = ["extension-module"] }
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
