[package]
name = "paraphina"
version.workspace = true
edition.workspace = true

[lib]
# Core engine as a reusable library.
name = "paraphina"
path = "src/lib.rs"

[[bin]]
# Simulation / demo driver binary (what `cargo run` executes).
name = "paraphina"
path = "src/main.rs"

[[bin]]
# Simulation & Evaluation runner (Option B per ROADMAP.md).
name = "sim_eval"
path = "src/bin/sim_eval.rs"

[dependencies]
# For JSON logging of per-tick snapshots (TelemetrySink, etc.).
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# For command-line argument parsing.
clap = { workspace = true }

# For deterministic random number generation.
rand = { workspace = true }
rand_chacha = { workspace = true }

# For checksum computation.
sha2 = { workspace = true }

# For ergonomic error handling.
anyhow = "1"

# For parallel Monte Carlo execution.
rayon = "1.10"

[dev-dependencies]
# For creating temporary directories in tests.
tempfile = "3"

